--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,23 +14,8 @@ executors:
   ubuntu:
     docker:
       - image: ubuntu:20.04
-  packer:
-    description: |
-      The HashiCorp provided Packer container
-    parameters:
-      packer-version:
-        type: string
-        default: "1.8"
-    docker:
-      - image: hashicorp/packer:<< parameters.packer-version >>
-
 
 commands:
-  install-deps:
-    steps:
-      - run: |
-          sudo apt update
-          sudo apt install python-is-python3
   prepare:
     parameters:
       linux:
@@ -44,20 +29,18 @@ commands:
     steps:
       - checkout
       - git_fetch_all_tags
-      - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
       - when:
           condition: << parameters.linux >>
           steps:
-            - run: sudo apt-get update
-            - run: sudo apt-get install ocl-icd-opencl-dev libhwloc-dev
-      - run: git submodule sync
-      - run: git submodule update --init
+            - run: sudo DEBIAN_FRONTEND=noninteractive apt-get update
+            - run: sudo DEBIAN_FRONTEND=noninteractive apt-get install ocl-icd-opencl-dev libhwloc-dev
   download-params:
     steps:
       - restore_cache:
           name: Restore parameters cache
-          keys:
-            - 'v26-2k-lotus-params'
+          keys: 'v26-2k-lotus-params'
           paths:
             - /var/tmp/filecoin-proof-parameters/
       - run:  ./lotus fetch-params 2048
@@ -87,30 +70,11 @@ commands:
           name: fetch all tags
           command: |
             git fetch --all
-  packer_build:
-    description: "Run a packer build"
-    parameters:
-      template:
-        description: |
-          The name of the packer template file
-        type: string
-        default: packer.json
-      args:
-        description: |
-          Arguments to pass to the packer build command
-        type: string
-        default: ""
-    steps:
-      - run:
-          name: "Run a packer build"
-          command: packer build << parameters.args >> << parameters.template >>
-          no_output_timeout: 30m
 
 jobs:
   mod-tidy-check:
     executor: golang
     steps:
-      - install-deps
       - prepare
       - run: go mod tidy -v
       - run:
@@ -121,7 +85,6 @@ jobs:
   build-all:
     executor: golang
     steps:
-      - install-deps
       - prepare
       - run: sudo apt-get update
       - run: sudo apt-get install npm
@@ -144,10 +107,83 @@ jobs:
   build-spacenet:
     executor: golang
     steps:
-      - install-deps
       - prepare
       - run:
           command: make spacenet
+  build-linux-spacenet:
+    description: build spacenet on Linux VM
+    machine:
+      image: ubuntu-2204:2023.02.1
+    steps:
+      - prepare:
+          linux: true
+          darwin: false
+      - run: go version
+      - run:
+          name: Install Rust
+          command: |
+            curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - restore_cache:
+          name: restore cache
+          keys:
+            - linux-v3-go-deps-{{ arch }}-{{ checksum "go.sum" }}
+      - run:
+          command: make deps lotus
+          no_output_timeout: 30m
+      - run:
+          command: make spacenet
+          no_output_timeout: 10m
+      - save_cache:
+          name: save cache
+          key: linux-v3-go-deps-{{ arch }}-{{ checksum "go.sum" }}
+          paths:
+            - "~/.rustup"
+            - "~/.cargo"
+            - ~/.go_workspace/pkg/mod
+            - ~/.cache/go-build
+  build-macos-spacenet:
+    description: build spacenet on macos
+    macos:
+      xcode: "14.2.0"
+    working_directory: ~/go/src/github.com/filecoin-project/lotus
+    steps:
+      - prepare:
+          linux: false
+          darwin: true
+      - run:
+          name: Install go
+          command: |
+            curl -O https://dl.google.com/go/go1.19.7.darwin-amd64.pkg && \
+            sudo installer -pkg go1.19.7.darwin-amd64.pkg -target /
+      - run:
+          name: Export Go
+          command: |
+            echo 'export PATH="$PATH:/usr/local/go/bin"' >> "$BASH_ENV"
+            echo 'export GOPATH="${HOME}/go"' >> $BASH_ENV
+            echo 'export PATH="$GOPATH"/bin:"$PATH"' >> "$BASH_ENV"
+      - run: go version
+      - run:
+          name: Install dependencies with Homebrew
+          command: HOMEBREW_NO_AUTO_UPDATE=1 brew install pkg-config coreutils jq hwloc
+      - run:
+          name: Install Rust
+          command: |
+            curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - restore_cache:
+          name: restore cache
+          keys:
+            - macos-v3-go-deps-{{ arch }}-{{ checksum "~/go/src/github.com/filecoin-project/lotus/go.sum" }}
+      - run:
+          command: make spacenet
+          no_output_timeout: 10m
+      - save_cache:
+          name: save cache
+          key: macos-v3-go-deps-{{ arch }}-{{ checksum "~/go/src/github.com/filecoin-project/lotus/go.sum" }}
+          paths:
+            - "~/.rustup"
+            - "~/.cargo"
+            - ~/go/pkg/mod
+            - ~/Library/Caches/go-build
 
   test: &basic_test
     description: |
@@ -187,11 +223,23 @@ jobs:
           set as an environment variable for private projects.
     executor: << parameters.executor >>
     steps:
-      - install-deps
       - prepare
+      - restore_cache:
+          name: restore cache
+          keys:
+            - test-v3-go-deps-{{ arch }}-{{ checksum "go.sum" }}
       - run:
           command: make deps lotus
           no_output_timeout: 30m
+      - run:
+          command: make spacenet
+          no_output_timeout: 10m
+      - save_cache:
+          name: save cache
+          key: test-v3-go-deps-{{ arch }}-{{ checksum "go.sum" }}
+          paths:
+            - ~/go/pkg/mod
+            - ~/.cache/go-build
       - download-params
       - run:
           name: go test
@@ -257,205 +305,14 @@ jobs:
     <<: *basic_test
 
   nightly-test-mir-with-mangler:
-      <<: *basic_test
+    <<: *basic_test
 
   nightly-test-mir-reconfiguration:
     <<: *basic_test
 
-  test-conformance:
-    description: |
-      Run tests using a corpus of interoperable test vectors for Filecoin 
-      implementations to test their correctness and compliance with the Filecoin
-      specifications.
-    parameters:
-      <<: *test-params
-      vectors-branch:
-        type: string
-        default: ""
-        description: |
-          Branch on github.com/filecoin-project/test-vectors to checkout and
-          test with. If empty (the default) the commit defined by the git
-          submodule is used.
-    executor: << parameters.executor >>
-    steps:
-      - install-deps
-      - prepare
-      - run:
-          command: make deps lotus
-          no_output_timeout: 30m
-      - download-params
-      - when:
-          condition:
-            not:
-              equal: [ "", << parameters.vectors-branch >> ]
-          steps:
-            - run:
-                name: checkout vectors branch
-                command: |
-                  cd extern/test-vectors
-                  git fetch
-                  git checkout origin/<< parameters.vectors-branch >>
-      - run:
-          name: install statediff globally
-          command: |
-            ## statediff is optional; we succeed even if compilation fails.
-            mkdir -p /tmp/statediff
-            git clone https://github.com/filecoin-project/statediff.git /tmp/statediff
-            cd /tmp/statediff
-            go install ./cmd/statediff || exit 0
-      - run:
-          name: go test
-          environment:
-            SKIP_CONFORMANCE: "0"
-          command: |
-            mkdir -p /tmp/test-reports
-            mkdir -p /tmp/test-artifacts
-            gotestsum \
-              --format pkgname-and-test-fails \
-              --junitfile /tmp/test-reports/junit.xml \
-              -- \
-              -v -coverpkg ./chain/vm/,github.com/filecoin-project/specs-actors/... -coverprofile=/tmp/conformance.out ./conformance/
-            go tool cover -html=/tmp/conformance.out -o /tmp/test-artifacts/conformance-coverage.html
-          no_output_timeout: 30m
-      - store_test_results:
-          path: /tmp/test-reports
-      - store_artifacts:
-          path: /tmp/test-artifacts/conformance-coverage.html
-  build-ntwk-calibration:
-    description: |
-      Compile lotus binaries for the calibration network
-    parameters:
-      <<: *test-params
-    executor: << parameters.executor >>
-    steps:
-      - install-deps
-      - prepare
-      - run: make calibnet
-      - run: mkdir linux-calibrationnet && mv lotus lotus-miner lotus-worker linux-calibrationnet
-      - persist_to_workspace:
-          root: "."
-          paths:
-            - linux-calibrationnet
-  build-ntwk-butterfly:
-    description: |
-      Compile lotus binaries for the butterfly network
-    parameters:
-      <<: *test-params
-    executor: << parameters.executor >>
-    steps:
-      - install-deps
-      - prepare
-      - run: make butterflynet
-      - run: mkdir linux-butterflynet && mv lotus lotus-miner lotus-worker linux-butterflynet
-      - persist_to_workspace:
-          root: "."
-          paths:
-            - linux-butterflynet
-  build-lotus-soup:
-    description: |
-      Compile `lotus-soup` Testground test plan
-    parameters:
-      <<: *test-params
-    executor: << parameters.executor >>
-    steps:
-      - install-deps
-      - prepare
-      - run: cd extern/filecoin-ffi && make
-      - run:
-          name: "go get lotus@master"
-          command: cd testplans/lotus-soup && go mod edit -replace=github.com/filecoin-project/lotus=../.. && go mod tidy
-      - run:
-          name: "build lotus-soup testplan"
-          command: pushd testplans/lotus-soup && go build -tags=testground .
-  trigger-testplans:
-    description: |
-      Trigger `lotus-soup` test cases on TaaS
-    parameters:
-      <<: *test-params
-    executor: << parameters.executor >>
-    steps:
-      - install-deps
-      - prepare
-      - run:
-          name: "download testground"
-          command: wget https://gist.github.com/nonsense/5fbf3167cac79945f658771aed32fc44/raw/2e17eb0debf7ec6bdf027c1bdafc2c92dd97273b/testground-d3e9603 -O ~/testground-cli && chmod +x ~/testground-cli
-      - run:
-          name: "prepare .env.toml"
-          command: pushd testplans/lotus-soup && mkdir -p $HOME/testground && cp env-ci.toml $HOME/testground/.env.toml && echo 'endpoint="https://ci.testground.ipfs.team"' >> $HOME/testground/.env.toml && echo 'user="circleci"' >> $HOME/testground/.env.toml
-      - run:
-          name: "prepare testground home dir and link test plans"
-          command: mkdir -p $HOME/testground/plans && ln -s $(pwd)/testplans/lotus-soup $HOME/testground/plans/lotus-soup
-      - run:
-          name: "go get lotus@master"
-          command: cd testplans/lotus-soup && go get github.com/filecoin-project/lotus@master
-      - run:
-          name: "trigger deals baseline testplan on taas"
-          command: ~/testground-cli run composition -f $HOME/testground/plans/lotus-soup/_compositions/baseline-k8s-3-1.toml --metadata-commit=$CIRCLE_SHA1 --metadata-repo=filecoin-project/lotus --metadata-branch=$CIRCLE_BRANCH
-      - run:
-          name: "trigger payment channel stress testplan on taas"
-          command: ~/testground-cli run composition -f $HOME/testground/plans/lotus-soup/_compositions/paych-stress-k8s.toml --metadata-commit=$CIRCLE_SHA1 --metadata-repo=filecoin-project/lotus --metadata-branch=$CIRCLE_BRANCH
-
-  build-darwin-amd64:
-    description: build darwin lotus binary
-    working_directory: ~/go/src/github.com/filecoin-project/lotus
-    macos:
-      xcode: "13.4.1"
-    steps:
-      - build-platform-specific:
-          linux: false
-          darwin: true
-          darwin-architecture: amd64
-      - run: make lotus lotus-miner lotus-worker
-      - run: otool -hv lotus
-      - run:
-          name: check tag and version output match
-          command: ./scripts/version-check.sh ./lotus
-      - run: |
-          mkdir -p /tmp/workspace/darwin_amd64_v1 && \
-          mv lotus lotus-miner lotus-worker /tmp/workspace/darwin_amd64_v1/
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - darwin_amd64_v1
-
-  build-darwin-arm64:
-    description: self-hosted m1 runner
-    working_directory: ~/go/src/github.com/filecoin-project/lotus
-    machine: true
-    resource_class: filecoin-project/self-hosted-m1
-    steps:
-      - run: echo 'export PATH=/opt/homebrew/bin:"$PATH"' >> "$BASH_ENV"
-      - build-platform-specific:
-          linux: false
-          darwin: true
-          darwin-architecture: arm64
-      - run: |
-          export CPATH=$(brew --prefix)/include
-          export LIBRARY_PATH=$(brew --prefix)/lib
-          make lotus lotus-miner lotus-worker
-      - run: otool -hv lotus
-      - run:
-          name: check tag and version output match
-          command: ./scripts/version-check.sh ./lotus
-      - run: |
-          mkdir -p /tmp/workspace/darwin_arm64 && \
-          mv lotus lotus-miner lotus-worker /tmp/workspace/darwin_arm64/
-      - persist_to_workspace:
-          root: /tmp/workspace
-          paths:
-            - darwin_arm64
-      - run:
-          command: make clean
-          when: always
-      - run:
-          name: cleanup homebrew
-          command: HOMEBREW_NO_AUTO_UPDATE=1 brew uninstall pkg-config coreutils jq hwloc
-          when: always
-
   gofmt:
     executor: golang
     steps:
-      - install-deps
       - prepare
       - run:
           command: "! go fmt ./... 2>&1 | read"
@@ -464,7 +321,6 @@ jobs:
   gen-check:
     executor: golang
     steps:
-      - install-deps
       - prepare
       - run: make deps
       - run: go install golang.org/x/tools/cmd/goimports
@@ -491,7 +347,6 @@ jobs:
           Arguments to pass to golangci-lint
     executor: << parameters.executor >>
     steps:
-      - install-deps
       - prepare
       - run:
           command: make deps
@@ -503,6 +358,7 @@ jobs:
               --concurrency << parameters.concurrency >> << parameters.args >>
   lint-all:
     <<: *lint
+
 
 workflows:
   version: 2.1
@@ -542,6 +398,8 @@ workflows:
           go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration"
           target: "./itests/mir_test.go"
       - build-spacenet
+      - build-linux-spacenet
+      - build-macos-spacenet
       - build-all:
           filters:
             tags:
