--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,7 @@ jobs:
         description: gotestsum format. https://github.com/gotestyourself/gotestsum#format
       coverage:
         type: string
-        default: -coverprofile=/tmp/conformance.out -coverpkg ./chain/consensus/,./ipcagent,./eudico-core
+        default: "-coverprofile=/tmp/conformance.out -coverpkg ./chain/consensus/...,./chain/ipcagent/...,./chain/eudico-core/..."
         description: Coverage flag. Set to the empty string to disable.
     executor: << parameters.executor >>
     steps:
@@ -239,7 +239,6 @@ jobs:
           name: go test
           environment:
             TEST_RUSTPROOFS_LOGS: << parameters.proofs-log-test >>
-            SKIP_CONFORMANCE: "1"
             MIR_INTERCEPTOR_OUTPUT: "mir-interceptor"
             GOLOG_LOG_LEVEL: "info,mir-consensus=info,mir-manager=info"
           command: |
