--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,36 +357,10 @@ workflows:
     jobs:
       - lint-all:
           concurrency: "16"   # expend all docker 2xlarge CPUs.
-      - mod-tidy-check
-      - gofmt
-      - gen-check
-      - test-chain-unit:
-          name: chain-unit-tests
-          suite: consensus
-          target: "./chain/consensus/..."
-      - test-ipcagent-unit:
-          name: ipcagent-unit-tests
-          suite: consensus
-          target: "./chain/ipcagent/..."
-      - test-mir-smoke:
-          name: mir-smoke-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestMirSmoke"
-          target: "./itests/mir_test.go"
-      - test-ipc-basic:
-          name: ipc-basic-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestIPC"
-          target: "./itests/ipc_test.go"
-      - test-mir-basic:
-          name: mir-basic-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic"
-          target: "./itests/mir_test.go"
       - test-mir-reconfiguration:
           name: mir-reconfiguration-tests
           suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration"
+          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration_AddAndRemoveOneValidator"
           target: "./itests/mir_test.go"
       - build-spacenet
       - build-linux-spacenet
