--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,7 +335,7 @@ jobs:
             cd e2e
             dates="$(date +%s)"
             mkdir -p /tmp/e2e-artifacts/"$dates"
-            [ -d "./testdata/_runtime/logs" ] && cp -R ./testdata/_runtime/logs/* /tmp/e2e-artifacts/"$dates" || echo "E2E logs directory not found"
+            [ -d "./testdata/_runtime/logs" ] && cp -R ./testdata/_runtime/logs/*.log /tmp/e2e-artifacts/"$dates" || echo "E2E logs directory not found"
           when: on_fail
       - store_artifacts:
           path: /tmp/e2e-artifacts
