--- a/e2e/networks/simple.toml
+++ b/e2e/networks/simple.toml
@@ -1,4 +1,5 @@
 size = 4
 configNonce = 0
 startIP = "192.168.10.2"
-configDir = "./testdata/mir"
+nodesConfigDir = "./testdata/mir/mir-config"
+genesisDir = "./testdata/mir"
